Fixed $title probrem.

--- a/filter/compress.pl.in
+++ b/filter/compress.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: compress.pl.in,v 1.1 1999-08-25 00:40:15 knok Exp $
+# $Id: compress.pl.in,v 1.2 1999-08-26 06:09:38 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -27,10 +27,10 @@ package compress;
 use strict;
 require 'util.pl';
 
-my $TMPFILE = 'NMZ.ctmp';
+my $TMPFILE = util::tmpnam('NMZ.compr');
 
 sub filter ($$$$$$) {
-    my ($orig_cfile, $title, $cont, $weighted_str, $headings, $fields, $size)
+    my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
       = @_;
 
     print "Proccessing compress file ... (use '@OPT_HELPER_ZCAT@')\n"
