--- a/filter/bzip2.pl.in
+++ b/filter/bzip2.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: bzip2.pl.in,v 1.1 1999-08-25 00:40:15 knok Exp $
+# $Id: bzip2.pl.in,v 1.2 1999-08-26 06:09:37 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -27,10 +27,10 @@ package bzip2;
 use strict;
 require 'util.pl';
 
-my $TMPFILE = 'NMZ.bzip2tmp';
+my $TMPFILE = util::tmpnam('NMZ.bzip2');
 
 sub filter ($$$$$$$) {
-    my ($orig_cfile, $title, $cont, $weighted_str, $headings, $fields, $size)
+    my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
       = @_;
 
     print "Proccessing bzip2 file ... (use '@BZIP2_PATH@')\n"
