--- a/filter/pdf.pl.in
+++ b/filter/pdf.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: pdf.pl.in,v 1.1 1999-08-25 00:40:16 knok Exp $
+# $Id: pdf.pl.in,v 1.2 1999-08-26 06:09:39 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -28,11 +28,11 @@ use strict;
 require 'util.pl';
 require 'filter.pl';
 
-my $TMPFILE = 'NMZ.pdftmp';
-my $TMPFILE2 = 'NMZ.pdftmp2';
+my $TMPFILE = tmpnam('NMZ.pdf');
+my $TMPFILE2 = tmpnam('NMZ.pdf2');
 
 sub filter ($$$$$$$) {
-    my ($orig_cfile, $title, $cont, $weighted_str, $headings, $fields, $size)
+    my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
       = @_;
     my $cfile = defined $orig_cfile ? $$orig_cfile : '';
 
@@ -53,9 +53,10 @@ sub filter ($$$$$$$) {
     filter::line_adjust_filter($cont) unless $conf::NoLineAdOpt;
     filter::line_adjust_filter($weighted_str) unless $conf::NoLineAdOpt;
     filter::white_space_adjust_filter($cont);
-    filter::filename_to_title($cfile, $title, $weighted_str) unless $$title;
+    $fields->{title} = filter::filename_to_title($cfile, $weighted_str) 
+      unless $fields->{title};
     filter::show_filter_debug_info($cont, $weighted_str,
-			   $title, $fields, $headings);
+			   $fields, $headings);
 }
 
 1;
