--- a/filter/rfc.pl.in
+++ b/filter/rfc.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: rfc.pl.in,v 1.1 1999-08-25 00:40:16 knok Exp $
+# $Id: rfc.pl.in,v 1.2 1999-08-26 06:09:39 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -29,36 +29,39 @@ require 'util.pl';
 require 'filter.pl';
 
 sub filter ($$$$$$$) {
-    my ($orig_cfile, $title, $cont, $weighted_str, $headings, $fields, $size)
+    my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
       = @_;
     my $cfile = defined $orig_cfile ? $$orig_cfile : '';
 
     print "Proccessing rfc file ...\n"
       if ($conf::VerboseOpt);
 
-    rfc_filter($cont, $weighted_str, $title);
+    rfc_filter($cont, $weighted_str, $fields);
 
     filter::line_adjust_filter($cont) unless $conf::NoLineAdOpt;
     filter::line_adjust_filter($weighted_str) unless $conf::NoLineAdOpt;
     filter::white_space_adjust_filter($cont);
-    filter::filename_to_title($cfile, $title, $weighted_str) unless $$title;
+    $fields->{title} = filter::filename_to_title($cfile, $weighted_str)
+      unless $fields->{title};
     filter::show_filter_debug_info($cont, $weighted_str,
-			   $title, $fields, $headings);
+			   $fields, $headings);
 }
 
 # RFC 用のフィルタ
 # わりと書式はまちまちみたいだからそれなりに
 
 sub rfc_filter ($$$) {
-    my ($contents, $weighted_str, $title) = @_;
+    my ($contents, $weighted_str, $fields) = @_;
 
     $$contents =~ s/^\s+//s;
     $$contents =~ s/((.+\n)+)\s+(.*)//;
-    $$title = $3 if defined $3;
+    my $title = $fields->{title}
+    $title = $3 if defined $3;
     html::encode_entity($title);
+    $fields->{title} = $title;
     $$weighted_str .= "\x7f1\x7f$1\x7f/1\x7f\n" if defined $1;
     my $weight = $conf::Weight{'html'}->{'title'};
-    $$weighted_str .= "\x7f$weight\x7f$$title\x7f/$weight\x7f\n";
+    $$weighted_str .= "\x7f$weight\x7f$title\x7f/$weight\x7f\n";
     # summary または Introductionがあればそれを先頭に持ってくる
 #    $$contents =~ s/\A(.+?^(\d+\.\s*)?(Abstract|Introduction)\n\n)//ims;
     $$contents =~ s/([\s\S]+^(\d+\.\s*)?(Abstract|Introduction)\n\n)//im;
