src/configure.in, filter/{man.pl,compress.pl}: Substitute 	@GROFF,ZCAT}_PATH@ for @OPT_HELPER_{GROFF,ZCAT}@.
src/configure.in: Add codes to make filter/supported.pl. [namazu-dev 199]

Makefile.am: Add "supported.pl" into CLEANFILES.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,7 @@ SUBDIRS = src
 
 CLEANFILES = lib/conf.pl namazu.spec \
 	     filter/gzip.pl filter/compress.pl filter/man.pl filter/rfc.pl \
-	     filter/bzip2.pl filter/msword.pl 
+	     filter/bzip2.pl filter/msword.pl filter/supported.pl
 
 pkgdatadir = @datadir@/@PACKAGE@/@VERSION@
 
