--- a/filter/compress.pl.in
+++ b/filter/compress.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: compress.pl.in,v 1.2 1999-08-26 06:09:38 knok Exp $
+# $Id: compress.pl.in,v 1.3 1999-08-26 08:04:15 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -33,10 +33,10 @@ sub filter ($$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
       = @_;
 
-    print "Proccessing compress file ... (use '@OPT_HELPER_ZCAT@')\n"
+    print "Proccessing compress file ... (use '@ZCAT_PATH@')\n"
       if ($conf::VerboseOpt);
 
-    my $fh = util::fopen_or_die("|@OPT_HELPER_ZCAT@ > $TMPFILE");
+    my $fh = util::fopen_or_die("|@ZCAT_PATH@ > $TMPFILE");
     print $fh $$cont;
     undef $fh;
     $fh = util::fopen_or_die("$TMPFILE");
