--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.11 1999-08-26 08:04:13 satoru Exp $
+dnl $Id: configure.in,v 1.12 1999-08-26 08:42:13 rug Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -30,9 +30,9 @@ if test -n "$GCC"; then
     CFLAGS="$CFLAGS -Wall"
 fi
 
-dnl Checks for non-UNIX environment.
+dnl OS specific.
 AC_EXEEXT
-
+AC_OBJEXT
 
 dnl Checks for libraries.
 dnl Replace `main' with a function in -lm:
