--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,9 +17,9 @@ bin_SCRIPTS = gcnmz mailutime mknmz gtnmz
 CLEANFILES = mknmz.pl $(bin_SCRIPTS)
 
 pkgdatadir  = @datadir@/@PACKAGE@
-libdir      = @pkgdatadir@/lib
-filterdir   = @pkgdatadir@/filter
-templatedir = @pkgdatadir@/template
+libdir      = $(pkgdatadir)/lib
+filterdir   = $(pkgdatadir)/filter
+templatedir = $(pkgdatadir)/template
 
 namazu_SOURCES = cgi.c codeconv.c conf.c form.c hlist.c message.c \
 	namazu.c output.c parser.c re.c regex.c search.c \
