--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -32,8 +32,6 @@ includedir = @includedir@
 oldincludedir = /usr/include
 
 DESTDIR =
-
-pkgdatadir = $(datadir)/@PACKAGE@
 pkglibdir = $(libdir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
 
@@ -100,9 +98,10 @@ bin_SCRIPTS = gcnmz mailutime mknmz gtnmz
 
 CLEANFILES = mknmz.pl $(bin_SCRIPTS)
 
-libdir = @datadir@/@PACKAGE@/@VERSION@/lib
-filterdir = @datadir@/@PACKAGE@/@VERSION@/filter
-templatedir = @datadir@/@PACKAGE@/@VERSION@/template
+pkgdatadir = @datadir@/@PACKAGE@
+libdir = $(pkgdatadir)/lib
+filterdir = $(pkgdatadir)/filter
+templatedir = $(pkgdatadir)/template
 
 namazu_SOURCES = cgi.c codeconv.c conf.c form.c hlist.c message.c 	namazu.c output.c parser.c re.c regex.c search.c 	seed.c util.c values.c wakati.c result.l getopt.c getopt1.c 	field.c usage.c
 
