--- a/filter/bzip2.pl.in
+++ b/filter/bzip2.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: bzip2.pl.in,v 1.2 1999-08-26 06:09:37 knok Exp $
+# $Id: bzip2.pl.in,v 1.3 1999-08-27 01:30:49 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -27,7 +27,7 @@ package bzip2;
 use strict;
 require 'util.pl';
 
-my $TMPFILE = util::tmpnam('NMZ.bzip2');
+my $TMPFILE = tmpnam('NMZ.bzip2');
 
 sub filter ($$$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
@@ -36,11 +36,11 @@ sub filter ($$$$$$$) {
     print "Proccessing bzip2 file ... (use '@BZIP2_PATH@')\n"
       if ($conf::VerboseOpt);
 
-    my $fh = util::fopen_or_die("|@BZIP2_PATH@ -cd > $TMPFILE");
+    my $fh = efopen("|@BZIP2_PATH@ -cd > $TMPFILE");
     print $fh $$cont;
     undef $fh;
-    $fh = util::fopen_or_die("$TMPFILE");
-    $$cont = util::readfile($fh);
+    $fh = efopen("$TMPFILE");
+    $$cont = readfile($fh);
     undef $fh;
     unlink($TMPFILE);
 
