--- a/filter/compress.pl.in
+++ b/filter/compress.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: compress.pl.in,v 1.3 1999-08-26 08:04:15 satoru Exp $
+# $Id: compress.pl.in,v 1.4 1999-08-27 01:30:49 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -27,7 +27,7 @@ package compress;
 use strict;
 require 'util.pl';
 
-my $TMPFILE = util::tmpnam('NMZ.compr');
+my $TMPFILE = tmpnam('NMZ.compr');
 
 sub filter ($$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
@@ -36,11 +36,11 @@ sub filter ($$$$$$) {
     print "Proccessing compress file ... (use '@ZCAT_PATH@')\n"
       if ($conf::VerboseOpt);
 
-    my $fh = util::fopen_or_die("|@ZCAT_PATH@ > $TMPFILE");
+    my $fh = efopen("|@ZCAT_PATH@ > $TMPFILE");
     print $fh $$cont;
     undef $fh;
-    $fh = util::fopen_or_die("$TMPFILE");
-    $$cont = util::readfile($fh);
+    $fh = efopen("$TMPFILE");
+    $$cont = readfile($fh);
     undef $fh;
     unlink($TMPFILE);
 
