--- a/filter/gzip.pl.in
+++ b/filter/gzip.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: gzip.pl.in,v 1.2 1999-08-26 06:09:38 knok Exp $
+# $Id: gzip.pl.in,v 1.3 1999-08-27 01:30:49 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -27,13 +27,13 @@ package gzip;
 use strict;
 require 'util.pl';
 
-my $TMPFILE = util::tmpnam('NMZ.gzip');
+my $TMPFILE = tmpnam('NMZ.gzip');
 
 sub filter ($$$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
       = @_;
 
-    if (util::checklib('Compress/Zlib.pm')) {
+    if (checklib('Compress/Zlib.pm')) {
 	filter_xs($cont);
     } else {
 	filter_file($cont);
@@ -44,15 +44,15 @@ sub filter ($$$$$$$) {
 
 sub filter_file ($) {
     my ($contref) = @_;
-    my $fh = util::fopen_or_die("|@GZIP_PATH@ -cd > $TMPFILE");
+    my $fh = efopen("|@GZIP_PATH@ -cd > $TMPFILE");
 
     print "Proccessing gzip file ... (use '@GZIP_PATH@')\n"
       if ($conf::VerboseOpt);
 
     print $fh $$contref;
     undef $fh;
-    $fh = util::fopen_or_die("$TMPFILE");
-    $$contref = util::readfile($fh);
+    $fh = efopen("$TMPFILE");
+    $$contref = readfile($fh);
     $fh->close();
     unlink($TMPFILE);
     return;
