--- a/filter/man.pl.in
+++ b/filter/man.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: man.pl.in,v 1.3 1999-08-26 08:04:16 satoru Exp $
+# $Id: man.pl.in,v 1.4 1999-08-27 01:30:50 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -28,7 +28,7 @@ use strict;
 require 'util.pl';
 require 'filter.pl';
 
-my $TMPFILE = util::tmpnam('NMZ.man');
+my $TMPFILE = tmpnam('NMZ.man');
 
 sub filter ($$$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
@@ -38,11 +38,11 @@ sub filter ($$$$$$$) {
     print "Proccessing man file ... (use '@GROFF_PATH@')\n"
       if ($conf::VerboseOpt);
 
-    my $fh = util::fopen_or_die("|@GROFF_PATH@ > $TMPFILE");
+    my $fh = efopen("|@GROFF_PATH@ > $TMPFILE");
     print $fh $$cont;
     undef $fh;
-    $fh = util::fopen_or_die("$TMPFILE");
-    $$cont = util::readfile($fh);
+    $fh = efopen("$TMPFILE");
+    $$cont = readfile($fh);
     undef $fh;
     unlink($TMPFILE);
 
