--- a/filter/pdf.pl.in
+++ b/filter/pdf.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: pdf.pl.in,v 1.2 1999-08-26 06:09:39 knok Exp $
+# $Id: pdf.pl.in,v 1.3 1999-08-27 01:30:50 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -39,13 +39,13 @@ sub filter ($$$$$$$) {
     print "Proccessing pdf file ... (use '@PDFTOTEXT_PATH@')\n"
       if ($conf::VerboseOpt);
 
-    my $fh = util::fopen_or_die("> $TMPFILE");
+    my $fh = efopen("> $TMPFILE");
     print $fh $$cont;
     undef $fh;
 
     system("@PDFTOTEXT_PATH@ -eucjp $TMPFILE $TMPFILE2");
-    $fh = util::fopen_or_die("< $TMPFILE2");
-    $$cont = util::readfile($fh);
+    $fh = efopen("< $TMPFILE2");
+    $$cont = readfile($fh);
     undef $fh;
     unlink($TMPFILE);
     unlink($TMPFILE2);
