--- a/src/mknmz.pl.in
+++ b/src/mknmz.pl.in
@@ -1,7 +1,7 @@
 #! @PERL@ -w
 # -*- CPerl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.24 1999-08-27 01:33:01 satoru Exp $
+# $Id: mknmz.pl.in,v 1.25 1999-08-27 07:01:13 knok Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -196,6 +196,20 @@ sub init () {
 
     @Seed = hash::init_seed();
     get_int_size();
+
+    # check filter modules
+    foreach my $module (<$filterdir2/*.pl>) {
+	$module =~ s/\Q$filterdir2\E/(.*).pl$/$1/;
+	require "$module.pl";
+	my (@mtypes, $status, $recursive);
+	eval '@mtypes = ' . "$module::mediatype();";
+	eval '$status = ' . "$module::status();";
+	eval '$recursive = ' . "$module::recursive();";
+	foreach my $mt (@mtypes) {
+	    $conf::supported{$mt} = $status;
+	    $conf::REQUIRE_ACTIONS{$mt} = $module;
+	    $conf::RECURSIVE_ACTIONS{$mt} = $recursive if ($recursive)
+    }
 
     # no return values
 }
