--- a/filter/bzip2.pl.in
+++ b/filter/bzip2.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: bzip2.pl.in,v 1.3 1999-08-27 01:30:49 satoru Exp $
+# $Id: bzip2.pl.in,v 1.4 1999-08-27 07:01:09 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -29,14 +29,30 @@ require 'util.pl';
 
 my $TMPFILE = tmpnam('NMZ.bzip2');
 
+sub mediatype() {
+    return ('application/x-bzip2');
+}
+
+sub status() {
+    my $bzip2path = checkcmd('bzip2');
+    return 'no' unless (defined $bzip2path);
+    return 'yes';
+}
+
+sub recursive() {
+    return 1;
+}
+
 sub filter ($$$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
       = @_;
 
-    print "Proccessing bzip2 file ... (use '@BZIP2_PATH@')\n"
+    my $bzip2path = checkcmd('bzip2');
+
+    print "Proccessing bzip2 file ... (use '$bzip2path')\n"
       if ($conf::VerboseOpt);
 
-    my $fh = efopen("|@BZIP2_PATH@ -cd > $TMPFILE");
+    my $fh = efopen("|$bzip2path -cd > $TMPFILE");
     print $fh $$cont;
     undef $fh;
     $fh = efopen("$TMPFILE");
