--- a/filter/compress.pl.in
+++ b/filter/compress.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: compress.pl.in,v 1.4 1999-08-27 01:30:49 satoru Exp $
+# $Id: compress.pl.in,v 1.5 1999-08-27 07:01:09 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -29,14 +29,30 @@ require 'util.pl';
 
 my $TMPFILE = tmpnam('NMZ.compr');
 
+sub mediatype() {
+    return ('application/x-compress');
+}
+
+sub status() {
+    my $zcatpath = checkcmd('zcat');
+    return 'no' unless (defined $zcatpath);
+    return 'yes';
+}
+
+sub recursive() {
+    return 1;
+}
+
 sub filter ($$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
       = @_;
 
-    print "Proccessing compress file ... (use '@ZCAT_PATH@')\n"
+    my $zcatpath = checkcmd('zcat');
+
+    print "Proccessing compress file ... (use '$zcatpath')\n"
       if ($conf::VerboseOpt);
 
-    my $fh = efopen("|@ZCAT_PATH@ > $TMPFILE");
+    my $fh = efopen("|$zcatpath > $TMPFILE");
     print $fh $$cont;
     undef $fh;
     $fh = efopen("$TMPFILE");
