--- a/filter/gzip.pl.in
+++ b/filter/gzip.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: gzip.pl.in,v 1.3 1999-08-27 01:30:49 satoru Exp $
+# $Id: gzip.pl.in,v 1.4 1999-08-27 07:01:09 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -28,6 +28,21 @@ use strict;
 require 'util.pl';
 
 my $TMPFILE = tmpnam('NMZ.gzip');
+
+sub mediatype() {
+    return ('application/x-gzip');
+}
+
+sub status() {
+    return 'yes' if (checklib('Compress/Zlib.pm'));
+    my $gzippath = checkcmd('gzip');
+    return 'yes' unless (defined $gzippath);
+    return 'no';
+}
+
+sub recursive() {
+    return 1;
+}
 
 sub filter ($$$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
