--- a/filter/msword.pl.in
+++ b/filter/msword.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: msword.pl.in,v 1.3 1999-08-27 01:30:50 satoru Exp $
+# $Id: msword.pl.in,v 1.4 1999-08-27 07:01:10 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -32,19 +32,37 @@ require 'html.pl';
 my $TMPFILE = tmpnam('NMZ.word');
 my $TMPFILE2 = itil::tmpnam('NMZ.word2');
 
+sub mediatype() {
+    return ('application/msword');
+}
+
+sub status() {
+    my $wordconvpath = checkcmd('mswordview');
+    my $utfconvpath = checkcmd('lv');
+    return 'yes' if (defined $wordconvpath && defined utfconvpath);
+    return 'no';
+}
+
+sub recursive() {
+    return 0;
+}
+
 sub filter ($$$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
       = @_;
     my $cfile = defined $orig_cfile ? $$orig_cfile : '';
 
-    print "Proccessing ms-word file ... (use '@MSWORDVIEW_PATH@')\n"
+    my $wordconvpath = checkcmd('mswordview');
+    my $utfconvpath = checkcmd('lv');
+
+    print "Proccessing ms-word file ... (use '$wordconvpath', '$utfconvpath')\n"
       if ($conf::VerboseOpt);
 
     my $fh = efopen("> $TMPFILE");
     print $fh $$cont;
     undef $fh;
 
-    system("@MSWORDVIEW_PATH@ -o - $TMPFILE | @LV_PATH@ -Iu8 -Oej > $TMPFILE2");
+    system("$wordconvpath -o - $TMPFILE | $utfconvpath -Iu8 -Oej > $TMPFILE2");
     $fh = efopen("< $TMPFILE2");
     $$cont = readfile($fh);
     undef $fh;
