--- a/filter/pdf.pl.in
+++ b/filter/pdf.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: pdf.pl.in,v 1.3 1999-08-27 01:30:50 satoru Exp $
+# $Id: pdf.pl.in,v 1.4 1999-08-27 07:01:10 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -30,6 +30,20 @@ require 'filter.pl';
 
 my $TMPFILE = tmpnam('NMZ.pdf');
 my $TMPFILE2 = tmpnam('NMZ.pdf2');
+
+sub mediatype() {
+    return ('application/pdf');
+}
+
+sub status() {
+    my $pdfconvpath = checkcmd('pdftotext');
+    return 'yes' if (defined $pdfconvpath);
+    return 'no';
+}
+
+sub recursive() {
+    return 0;
+}
 
 sub filter ($$$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
