--- a/filter/rfc.pl.in
+++ b/filter/rfc.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: rfc.pl.in,v 1.2 1999-08-26 06:09:39 knok Exp $
+# $Id: rfc.pl.in,v 1.3 1999-08-27 07:01:10 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -27,6 +27,18 @@ package rfc;
 use strict;
 require 'util.pl';
 require 'filter.pl';
+
+sub mediatype() {
+    return ('text/plain; x-type=rfc');
+}
+
+sub status() {
+    return 'yes';
+}
+
+sub recursive() {
+    return 0;
+}
 
 sub filter ($$$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
