Makefile.am: Add AUTOMAKE_OPTIONS = no-dependencies

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
 @SET_MAKE@
+AUTOMAKE_OPTIONS = no-dependencies
+
 EXTRA_DIST = README-ja namazu.spec namazu.spec.in File-MMagic
 EXTRA_DIRS = conf doc etc lib lisp filter template tknamazu
 SUBDIRS = src @FILE_MMAGIC@
