--- a/Makefile.in
+++ b/Makefile.in
@@ -92,6 +92,8 @@ application_pdf = @application_pdf@
 application_x_bzip2 = @application_x_bzip2@
 application_x_compress = @application_x_compress@
 application_x_gzip = @application_x_gzip@
+AUTOMAKE_OPTIONS = no-dependencies
+
 EXTRA_DIST = README-ja namazu.spec namazu.spec.in File-MMagic
 EXTRA_DIRS = conf doc etc lib lisp filter template tknamazu
 SUBDIRS = src @FILE_MMAGIC@
@@ -120,7 +122,7 @@ all: all-redirect
 $(srcdir)/Makefile.in: Makefile.am $(top_srcdir)/configure.in $(ACLOCAL_M4) 
 	cd $(top_srcdir) && $(AUTOMAKE) --gnu Makefile
 
-Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status $(BUILT_SOURCES)
+Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) \
 	  && CONFIG_FILES=$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
@@ -289,11 +291,6 @@ distdir: $(DISTFILES)
 	-rm -rf $(distdir)
 	mkdir $(distdir)
 	-chmod 777 $(distdir)
-	here=`cd $(top_builddir) && pwd`; \
-	top_distdir=`cd $(distdir) && pwd`; \
-	distdir=`cd $(distdir) && pwd`; \
-	cd $(top_srcdir) \
-	  && $(AUTOMAKE) --include-deps --build-dir=$$here --srcdir-name=$(top_srcdir) --output-dir=$$top_distdir --gnu Makefile
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
